# SAM4Dwelling

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config_sam_vit_h.yaml
data_preparation/: DataProcessing.py  prepare_train_test.py
datasets/: datasets.py
models/: sam.py
models/mmseg/apis/: train.py
run_sam/: evaluation.py  inference_ft.py  predict.py  train.py
run_sam/helpers/: sod_metric.py  utils.py
